# text_to_ansys

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: text_to_ansys_design.md  text_to_ansys_interaction_mock.html
src/text_to_ansys/: __init__.py  cli.py  interactive.py
src/text_to_ansys/builders/: __init__.py  base.py  static_structural.py
src/text_to_ansys/parser/: __init__.py  text_to_spec.py
src/text_to_ansys/post/: __init__.py  pyvista_renderer.py
src/text_to_ansys/runtime/: __init__.py  case_manager.py  mapdl_executor.py
src/text_to_ansys/schema/: __init__.py  simulation_spec.py
src/text_to_ansys/tools/: __init__.py  case_tools.py
tests/: test_case_manager.py  test_case_tools.py  test_interactive.py  test_mapdl_executor.py  test_pyvista_renderer.py  test_schema_validation.py  test_static_builder.py  test_text_to_spec.py
